enable co-parent to enable children checkins from different device
